reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_empty.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "super::into_input_schema::<TestEnumEmpty>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "enum",
      "name": "reflect_demo::tests::enums::TestEnumEmpty"
    }
  ]
}
