reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_basic_variant_and_fields_and_named_fields.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "super::into_input_schema::<TestEnumWithBasicVariantAndFieldsAndNamedFields>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "enum",
      "name": "reflect_demo::tests::enums::TestEnumWithBasicVariantAndFieldsAndNamedFields",
      "variants": [
        {
          "name": "Variant0"
        },
        {
          "name": "Variant1",
          "fields": [
            {
              "name": "0",
              "type": {
                "name": "u8"
              },
              "required": true
            },
            {
              "name": "1",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        },
        {
          "name": "Variant2",
          "fields": [
            {
              "name": "field1",
              "type": {
                "name": "u8"
              },
              "required": true
            },
            {
              "name": "field2",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
