reflect-demo/src/tests/snapshots/reflect_demo__tests__enums__enum_with_discriminant.snap
---
source: reflect-demo/src/tests/enums.rs
expression: "TestEnumWithDiscriminant::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::enums::TestEnumWithDiscriminant"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "enum",
        "name": "reflect_demo::tests::enums::TestEnumWithDiscriminant",
        "variants": [
          {
            "name": "Variant1",
            "discriminant": 1
          },
          {
            "name": "Variant2",
            "discriminant": 2
          }
        ]
      }
    ]
  }
]
